--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,49 @@
     transform: rotate(360deg);
   }
 }
+
+.MainDiv {
+margin: 10px 10%;
+}
+
+.MainDiv p{
+  font-size: 18px;
+}
+
+.Showplace img{
+  width: 700px;
+}
+
+.Photos img{
+  width: 400px;
+  margin: 10px;
+}
+
+.Photos{
+  margin: 0 5%;
+}
+
+.Links{
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+  margin: 5px 10px;
+}
+
+#NavMenu{
+  text-align: center;
+  margin: 25px 5%;
+}
+
+#PlaceProps img{
+  width: 500px;
+}
+
+#PlaceProps{
+  margin: 10px 10%;
+}
+
+#MainShowplace{
+  margin: 10px 10%;
+
+}
